# legacy-takeover

./: .gitignore  USAGE.md  pyproject.toml
.superpowers/brainstorm/3504501-1781061214/content/: index.html
.superpowers/brainstorm/3504501-1781061214/state/: server-stopped  server.pid
docs/superpowers/plans/: 2026-06-10-legacy-takeover.md  2026-06-10-v0.2-deep-analysis.md
docs/superpowers/specs/: 2026-06-10-analysis-capabilities-spec.md  2026-06-10-legacy-takeover-design.md
skills/: legacy-takeover.md
src/legacy_takeover/: cli.py
src/legacy_takeover.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/legacy_takeover/core/: __init__.py  aggregator.py  detector.py  engine.py  git.py
src/legacy_takeover/plugins/: base.py  c.py  code_quality.py  cpp.py  csharp.py  cve_checker.py  go.py  infra_scanner.py  java.py  python.py  security_scanner.py  test_analyzer.py  typescript.py
src/legacy_takeover/report/: renderer.py
src/legacy_takeover/report/templates/: api_endpoints.md.j2  architecture.md.j2  database.md.j2  dependencies.md.j2  index.html.j2  (+2 more)
src/legacy_takeover/risk/: engine.py  loader.py
tests/: test_aggregator.py  test_detector.py  test_engine.py  test_git.py  test_integration.py
tests/test_plugins/: test_base.py  test_c.py  test_code_quality.py  test_cpp.py  test_csharp.py  test_cve_checker.py  test_go.py  test_infra_scanner.py  test_java.py  test_python.py  test_security_scanner.py  test_test_analyzer.py  test_typescript.py
tests/test_report/: test_renderer.py
tests/test_risk/: test_engine.py  test_loader.py
