[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legacy-takeover"
version = "0.1.0"
description = "Legacy system takeover assistant — auto-generate system manuals, architecture diagrams, dependency maps, and risk reports"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "gitpython>=3.1",
]

[project.scripts]
legacy-scan = "legacy_takeover.cli:main"

[project.entry-points."legacy_takeover.analyzers"]
python = "legacy_takeover.plugins.python:PythonAnalyzer"
java = "legacy_takeover.plugins.java:JavaAnalyzer"
go = "legacy_takeover.plugins.go:GoAnalyzer"
typescript = "legacy_takeover.plugins.typescript:TypeScriptAnalyzer"
csharp = "legacy_takeover.plugins.csharp:CSharpAnalyzer"
c = "legacy_takeover.plugins.c:CAnalyzer"
cpp = "legacy_takeover.plugins.cpp:CppAnalyzer"

[tool.setuptools.packages.find]
where = ["src"]
